# rust-hasher

./: Cargo.toml
src/: lib.rs  main.rs
